RESOLVED FIXED171017
[MediaStream iOS] Hold process assertion while media capture is active
https://bugs.webkit.org/show_bug.cgi?id=171017
Summary [MediaStream iOS] Hold process assertion while media capture is active
Eric Carlson
Reported 2017-04-19 15:35:46 PDT
Hold process assertion while media capture is active
Attachments
Proposed patch. (9.76 KB, patch)
2017-04-19 15:46 PDT, Eric Carlson
no flags
Radar WebKit Bug Importer
Comment 1 2017-04-19 15:36:17 PDT
Eric Carlson
Comment 2 2017-04-19 15:46:30 PDT
Created attachment 307516 [details] Proposed patch.
Dean Jackson
Comment 3 2017-04-19 18:09:19 PDT
Comment on attachment 307516 [details] Proposed patch. test?
WebKit Commit Bot
Comment 4 2017-04-20 15:23:19 PDT
Comment on attachment 307516 [details] Proposed patch. Clearing flags on attachment: 307516 Committed r215582: <http://trac.webkit.org/changeset/215582>
WebKit Commit Bot
Comment 5 2017-04-20 15:23:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.