Source/WebCore/page/PerformanceMonitor.cpp
@@ -302,6 +302,7 @@ void PerformanceMonitor::processMayBecomeInactiveTimerFired()
 void PerformanceMonitor::updateProcessStateForMemoryPressure()
 {
     bool hasAudiblePages = false;
+    bool hasCapturingPages = false;
     bool mayBecomeInactive = true;
 
     Page::forEachPage([&] (Page& page) {
@@ -311,9 +312,11 @@ void PerformanceMonitor::updateProcessStateForMemoryPressure()
             mayBecomeInactive = false;
         if (page.activityState() & ActivityState::IsAudible)
             hasAudiblePages = true;
+        if (page.activityState() & ActivityState::IsCapturingMedia)
+            hasCapturingPages = true;
     });
 
-    bool isActiveProcess = !mayBecomeInactive || hasAudiblePages;
+    bool isActiveProcess = !mayBecomeInactive || hasAudiblePages || hasCapturingPages;
     MemoryPressureHandler::singleton().setProcessState(isActiveProcess ? WebsamProcessState::Active : WebsamProcessState::Inactive);
 }
 
